syntax = "proto3";

package battle;

option go_package = "service/battle/proto";

message JoinBattleRequest {
  enum MSGID {
    INVALID_MSGID = 0;
    ID = 2000;
  }
  string battle_id = 1;
  uint32 seat_id = 2;
  int32 ready_state = 3;
}

message JoinBattleResponse {
  enum MSGID {
    INVALID_MSGID = 0;
    ID = 2001;
  }
  string battle_id = 1;
  uint32 seat_id = 2;
  int32 ready_state = 3;
}

message PlayerReadyRequest {
  enum MSGID {
    INVALID_MSGID = 0;
    ID = 2002;
  }
  string battle_id = 1;
  int32 ready_state = 2;
}

message PlayerReadyResonse {
  enum MSGID {
    INVALID_MSGID = 0;
    ID = 2003;
  }
  int32 ready_state = 1;
}

message LoigcMessageWrap {
  enum MSGID {
    INVALID_MSGID = 0;
    ID = 2004;
  }
  string battle_id = 1;
  uint32 msgid = 2;
  bytes data = 3;
}
